fixed contrast of text for accessibility

--- a/css/test.css
+++ b/css/test.css
@@ -10,7 +10,7 @@
     /* #725ac1 secondary  */
     /* #8d86c9 third */
 
-    --text-color: #1F2937;
+    --text-color: black;
 
     /* Typography */
     --fontfamily-primary : "Inter", sans-serif;
